# wfc-sudoku-solver

./: .clang-format  CMakeLists.txt  README.md  bit_manipulation.cpp  bit_manipulation.hpp  board.cpp  board.hpp  main.cpp  random.hpp  sudoku.cpp  sudoku.hpp
sources/: board.cpp  board.hpp  main.cpp  optim.cpp  optim.hpp  sudoku.cpp  sudoku.hpp  utils.cpp  utils.hpp
